
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.win10.myapplication.MainActivity"

    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:weightSum="10">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        >
        <TextView
            android:text="@string/string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="80sp"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true"
            />


    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:rowCount="3"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="15dp"
        android:background="@color/gold"
        >
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"


            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:orientation="vertical"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView3"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/manutd"
                    android:onClick="manutd"
                    />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/manutd"
                    android:textAlignment="center"

                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"


            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView2"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/mancity"
                    android:onClick="mancity"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/mancity"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"


            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView4"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/chelsea"
                    android:onClick="chelsea"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:layout_centerHorizontal="true"
                    android:text="@string/chelsea"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"


            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView7"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/arsenal"
                    android:onClick="arsenal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/arsenal"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"

                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/textView7" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"


            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView5"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/spurs"
                    android:onClick="spurs"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/spurs"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"

                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:id="@+id/textView5" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"


            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="center_vertical|center_horizontal"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/textView6"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/liverpool"
                    android:onClick="liverpool"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"

                    android:layout_centerHorizontal="true"
                    android:text="@string/liverpool"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:id="@+id/textView6" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>




    </GridLayout>
</LinearLayout>




